--- a/DatingApp/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp/DatingApp-SPA/src/app/nav/nav.component.html
@@ -11,9 +11,23 @@
     <li class="nav-item">
       <a class="nav-link" href="#">Messages</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" (click)="logout()" >Logout</a>
+    </li>
   </ul>
 
-  <form #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)=login()>
+  <div *ngIf="loggedIn()" class="dropdown">
+    <a class="dropdown-toggle text-light">
+      Welcome User
+    </a>
+    <div class="dropdown-menu" >
+      <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Edit Profile</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#"><i class="fa fa-signout"></i> Logout</a>
+    </div>
+  </div>
+
+  <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)=login()>
     <input class="form-control mr-sm-2" type="text" name="userName" placeholder="User Name" required [(ngModel)]="model.userName">
     <input class="form-control mr-sm-2" type="text" name="pasword" placeholder="Password" required [(ngModel)]="model.password">
     <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
