--- a/DatingApp/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp/DatingApp-SPA/src/app/register/register.component.html
@@ -10,6 +10,13 @@
       [(ngModel)]="model.userName" 
       placeholder="User name">
   </div>
+<div class="form-group">
+  <label for="favoriteValue">WHat is your favorite value</label>
+  <select name="" id="favoriteValue" class="form-control">
+    <option *ngFor="let value of valuesFromHome" [value]="value">{{value.name}}</option>
+  </select>
+</div>
+
   <div class="form-group">
     <input 
       type="password" 
