--- a/DatingApp/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -1,9 +1,7 @@
 <div class="container mt-5">
   <div class="row">
-    <div class="col-lg-2 col-md-3 col-sm-6">
-      <div *ngFor="let user of users">
-          <app-member-card [user]='user'></app-member-card>
-      </div>
+    <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
+        <app-member-card [user]='user'></app-member-card>
     </div>
   </div>
 </div>
