--- a/DatingApp/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -1,3 +1,42 @@
-<p>
-  {{user?.knownAs}}
-</p>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-sm4">
+      <div class="card">
+        <img class="card-img-top img-thumbnail" src="{{user?.photoUrl}}" alt="{{user?.knownAs}}">
+        <div class="card-body">
+          <div>
+            <strong>Location:</strong>
+            <p>{{user?.city}}, {{user?.country}}</p>
+          </div>
+          <div>
+            <strong>
+              Age:
+              <p>{{user?.age}}</p>
+            </strong>
+          </div>
+          <div>
+            <strong>
+              Last Active:
+              <p>{{user?.lastActive}}</p>
+            </strong>
+          </div>
+          <div>
+            <strong>
+              Member Since:
+              <p>{{user?.created}}</p>
+            </strong>
+          </div>
+        </div>
+        <div class="card-footer">
+          <div class="btn-group d-flex">
+            <button class="btn btn-primary w-100">Like</button>
+            <button class="btn btn-success w-100">Message</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-8">
+
+    </div>
+  </div>
+</div>
