--- a/DatingApp/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -1,3 +1,98 @@
-<p>
-  {{user.knownAs}}
-</p>
+<div class="container mt-4">
+    <div class="row">
+      <div class="col-sm-4">
+        <h1>Your Profile</h1>
+      </div>
+      <div class="col-sm-8">
+        <div class="alert alert-info">
+          <p>
+            <strong>You have made changes. Any unsaved changes will be lost!</strong>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="card">
+          <img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
+          <div class="card-body">
+            <div>
+              <strong>Location:</strong>
+              <p>{{user.city}}, {{user.country}}</p>
+            </div>
+            <div>
+              <strong>
+                Age:
+                <p>{{user.age}}</p>
+              </strong>
+            </div>
+            <div>
+              <strong>
+                Last Active:
+                <p>{{user.lastActive}}</p>
+              </strong>
+            </div>
+            <div>
+              <strong>
+                Member Since:
+                <p>{{user.created}}</p>
+              </strong>
+            </div>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-success btn-block">Save Changes</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-8">
+        <div class="tab-pannel">
+          <tabset class="member-tabset">
+            <tab heading="Edit Profile">
+              <form action="">
+                  <h4>Description</h4>
+                  <textarea
+                    name="introduction"
+                    rows="6"
+                    class="form-control"
+                    [(ngModel)]="user.introduction">
+                  </textarea>
+                  <h4>Looking for</h4>
+                  <textarea
+                    name="lookingFor"
+                    rows="6"
+                    class="form-control"
+                    [(ngModel)]="user.lookingFor">
+                  </textarea>
+                  <h4>Interests</h4>
+                  <textarea
+                    name="interests"
+                    rows="6"
+                    class="form-control"
+                    [(ngModel)]="user.interests">
+                  </textarea>
+                  <h4>Location Details</h4>
+                  <div class="form-inline">
+                    <label for="city">City</label>
+                    <input 
+                      type="text"
+                      class="form-control"
+                      name="city"
+                      [(ngModel)]="user.city">
+                      <label for="country">Country</label>
+                    <input 
+                      type="text"
+                      class="form-control"
+                      name="country"
+                      [(ngModel)]="user.country">
+                  </div>
+              </form>
+            </tab>
+            <tab heading="Edit Photos">
+              <p>Photo Edit Will Go Here</p>
+            </tab>
+          </tabset>
+        </div>
+      </div>
+    </div>
+  </div>
+  
