--- a/DatingApp/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -3,11 +3,9 @@
       <div class="col-sm-4">
         <h1>Your Profile</h1>
       </div>
-      <div class="col-sm-8">
+      <div *ngIf="editForm.dirty" class="col-sm-8">
         <div class="alert alert-info">
-          <p>
-            <strong>You have made changes. Any unsaved changes will be lost!</strong>
-          </p>
+          <strong>You have made changes. Any unsaved changes will be lost!</strong>
         </div>
       </div>
     </div>
@@ -40,7 +38,7 @@
             </div>
           </div>
           <div class="card-footer">
-            <button class="btn btn-success btn-block">Save Changes</button>
+            <button [disabled]="!editForm.dirty" form="editForm" class="btn btn-success btn-block">Save Changes</button>
           </div>
         </div>
       </div>
@@ -48,7 +46,7 @@
         <div class="tab-pannel">
           <tabset class="member-tabset">
             <tab heading="Edit Profile">
-              <form action="">
+              <form #editForm="ngForm" id="editForm" (submit)="updateUser()">
                   <h4>Description</h4>
                   <textarea
                     name="introduction"
