added PhotoEditor component

--- a/DatingApp/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -86,7 +86,7 @@
               </form>
             </tab>
             <tab heading="Edit Photos">
-              <p>Photo Edit Will Go Here</p>
+              <app-photo-editor [photos]="user.photos"></app-photo-editor>
             </tab>
           </tabset>
         </div>
