--- a/DatingApp/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp/DatingApp-SPA/src/app/register/register.component.html
@@ -1,13 +1,11 @@
-<form #registerForm="ngForm" (ngSubmit)="register()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
   <div class="form-group">
     <input 
       type="text" 
       class="form-control" 
-      required 
-      name="userName" 
-      [(ngModel)]="model.userName" 
+      formControlName="userName" 
       placeholder="User name">
   </div>
 
@@ -15,13 +13,25 @@
     <input 
       type="password" 
       class="form-control" 
-      required 
-      name="password" 
-      [(ngModel)]="model.password" 
+      formControlName="password" 
       placeholder="password">
   </div>
+
+  <div class="form-group">
+    <input
+      type="password"
+      class="form-control"
+      formControlName="confirmPassword"
+      placeholder="Confirm Password">
+    </div>
+
   <div class="form-group text-center">
     <button class="btn btn-success">Register</button>
     <button class="btn btn-default" (click)="cancel()">Cancel</button>
   </div>
 </form>
+
+<p>
+  Form value: {{registerForm.value | json }}
+</p>
+<p>Form staus: {{registerForm.status | json}}</p>
