--- a/DatingApp/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -42,6 +42,28 @@
     </div>
     <button type="submit" class="btn btn-primary" style="margin-left:10px">Apply Filters</button>
     <button type="submit" class="btn btn-info" style="margin-left:10px" (click)="resetFilters()">Reset Filter</button>
+
+    <div class="col">
+      <div class="btn-group float-right"></div>
+      <button
+        type="button"
+        name="orderBy"
+        class="btn btn-primary"
+        btnRadio="lastActive"
+        [(ngModel)]="userParams.orderBy"
+        (click)="loadUsers()">
+        Last Active
+      </button>
+      <button
+        type="button"
+        name="orderBy"
+        class="btn btn-primary"
+        btnRadio="created"
+        [(ngModel)]="userParams.orderBy"
+        (click)="loadUsers()">
+        Newest Members
+      </button>
+    </div>
   </form>
   <br>
 
