Added delete message functionality to api and client

--- a/DatingApp/DatingApp-SPA/src/app/messages/messages.component.html
+++ b/DatingApp/DatingApp-SPA/src/app/messages/messages.component.html
@@ -57,7 +57,12 @@
           </td>
           <td>{{message.messageSent | timeAgo}}</td>
           <td>
-            <button class="btn-danger">Delete</button>
+            <button
+              class="btn-danger"
+              (click)="deleteMessage(message.id)"
+              (click)="$event.stopPropagation()">
+              Delete
+            </button>
           </td>
         </tr>
     </table>
